Controls added to video

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="box-1">
 
         <div class="box1-img">
-            <img src="/images/banner.jpg" alt="">
+            <img src="./images/banner.jpg" alt="">
         </div>
         <div class="box1-text">
             <a href="">Learn something <br>  new everyday</a>
@@ -189,7 +189,7 @@
         <h1>Thesis exhibit</h1>
         <div class="thesis_exhibit">
             <div class="t_left">
-                <video autoplay muted loop><source src="./videos/thesis.mp4" type="video/mp4"></video>
+                <video autoplay muted loop><source src="./videos/thesis.mp4" type="video/mp4" controls></video>
                 <h3> &nbsp &nbspReimagine urban</h3>                            <p style="width: 50%;"> &nbsp &nbsp "Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex nulla facilis exercitationem hic tempora voluptates illum illo distinctio dolorum non corporis libero, aliquid beatae unde nobis nostrum, consectetur iure."</p>
             </div>
             <div class="t_right">
