--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         .box1-img img {
             height: 478px;
             width: 748px;
-            margin: 46px 33px;
-        }
+            margin: 92px 33px;
+}
+
+
+    
 
         .box1-text {
             float: right;
@@ -70,7 +73,7 @@
 
         }
     </style>
-    <title>Colmor Project </title>
+    <title>Colmor Project By Krushna</title>
 </head>
 
 <body>
@@ -105,7 +108,7 @@
         <div class="p_left">
             <img src="./images/information-main.jpg">
             <h1>It doesn't hurt to keep practicing</h1>
-            <p>"Latin text"</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ad at provident assumenda ex hic nesciunt illum doloremque tempore, recusandae cum, id dignissimos iure explicabo natus asperiores facere?</p>
             <p>Emanuel, Sr Strategist at Hiring.com</p>
         </div>
         <div class="p_right">
@@ -190,7 +193,8 @@
         <div class="thesis_exhibit">
             <div class="t_left">
                 <video autoplay muted controls><source src="./videos/thesis.mp4" type="video/mp4" ></video>
-                <h3> &nbsp &nbspReimagine urban</h3>                            <p style="width: 50%;"> &nbsp &nbsp "Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex nulla facilis exercitationem hic tempora voluptates illum illo distinctio dolorum non corporis libero, aliquid beatae unde nobis nostrum, consectetur iure."</p>
+                <h3> &nbsp &nbspReimagine urban</h3>                       
+                <p id="kt" style="width: 50%;"> &nbsp &nbsp "Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex nulla facilis  &nbsp &nbsp  exercitationem hic tempora voluptates illum illo distinctio dolorum non corporis  &nbsp &nbsp  &nbsp &nbsp libero, aliquid beatae unde nobis nostrum, consectetur iure."</p>
             </div>
             <div class="t_right">
                 <ul class="t_right_list">
