--- a/index.html
+++ b/index.html
@@ -9,71 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <style>
-        .logoo{
-            padding: 2px 26px;
-
-        }
-        .logoo a{
-            font-weight: bold;
-            font-size:22px;
-        }
-        .head-text {
-            float: right;
-            margin-top: -30px;
-            padding-right: 10px;
-            color: black;
-        }
-
-        .head-text a {
-            color: black;
-        }
-
-        .box-1 {
-            height: 600px;
-            width: 100%;
-            background-color: #cac8c8;
-        }
-
-        .box1-img img {
-            height: 478px;
-            width: 748px;
-            margin: 92px 33px;
-}
-
-
-    
-
-        .box1-text {
-            float: right;
-            margin: -438px 67px;
-            /* padding: -12px -7px; */
-
-        }
-
-        .box1-text a {
-            text-decoration: none;
-            font-size: xx-large;
-            font-weight: bold;
-            color: rgb(52, 51, 51);
-            padding: 2px 2px;
-            margin: 2px 2px;
-
-        }
-
-        .box1-text p {
-            padding: 2px 2px;
-            margin: 2px 2px;
-
-        }
-        .box-2img img{
-            height: 478px;
- width: 748px;
- margin: 46px 33px;
-
-        }
-    </style>
-    <title>Colmor Project By Krushna</title>
+    <title>Colmor Project </title>
 </head>
 
 <body>
@@ -81,6 +17,9 @@
         <div class="logoo">
             <img src="/images/ic-logo.svg" alt=""><a href="" style="font-weight: bold;color: black;">COLMAR</a><a
                 href="" style="color: rgb(129, 119, 119);">ACADEMY</a>
+            <img class="mblogo" src="/images/ic-on-campus.svg" alt="">
+            <img class="mblogo" src="/images/ic-online.svg" alt="">
+            <img class="mblogo" src="/images/ic-login.svg" alt="">
         </div>
         <div class="head-text">
             <a href="">On campus</a>
@@ -94,10 +33,11 @@
             <img src="./images/banner.jpg" alt="">
         </div>
         <div class="box1-text">
-            <a href="">Learn something <br>  new everyday</a>
+            <a href="">Learn something <br> new everyday</a>
             <p>Lorem ipsum dolor sit amet consectetur, <br> &nbsp;
                 adipisicing elit. Mollitia, nemo!</p>
-            <button type="button" class="btn btn-dark"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Start Here  &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</button>
+            <button type="button" class="btn btn-dark"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                Start Here &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</button>
         </div>
 
     </div>
@@ -108,7 +48,8 @@
         <div class="p_left">
             <img src="./images/information-main.jpg">
             <h1>It doesn't hurt to keep practicing</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ad at provident assumenda ex hic nesciunt illum doloremque tempore, recusandae cum, id dignissimos iure explicabo natus asperiores facere?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ad at provident assumenda ex hic nesciunt
+                illum doloremque tempore, recusandae cum, id dignissimos iure explicabo natus asperiores facere?</p>
             <p>Emanuel, Sr Strategist at Hiring.com</p>
         </div>
         <div class="p_right">
@@ -117,7 +58,7 @@
                 <div class="orientation_date">
                     <h2>Orientation Date</h2>
                     <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                    <p class="read_more">Read more</p>
+                    <a class="read_more" href="">Read more</a>
                 </div>
             </div>
             <div class="campus">
@@ -125,7 +66,7 @@
                 <div class="our_campus">
                     <h2>Our campus</h2>
                     <p>Find which campus is close by you</p>
-                    <p class="read_more">Read more</p>
+                    <a class="read_more" href="">Read more</a>
                 </div>
             </div>
             <div class="guest">
@@ -133,14 +74,34 @@
                 <div class="guest_lecture">
                     <h2>Our guest lecture</h2>
                     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                    <p class="read_more">Read more</p>
+                    <a class="read_more" href="">Read more</a>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- start learning  -->
+    <div class="Start_learning">
+        <!-- for Mobile -->
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h6 class="text-muted" style="text-align: center; font-size: xx-large;
+                font-weight: bold;">Start learning</h6>
+                    <ul class="list-group">
+                        <li class="list-group-item">Software engineering</li>
+                        <li class="list-group-item">Computer art</li>
+                        <li class="list-group-item">Design</li>
+                        <li class="list-group-item">Data</li>
+                        <li class="list-group-item">Business</li>
+                        <li class="list-group-item">Marketing</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
+    </div>
+    <!-- for desktop -->
     <div class="learning">
         <h1>Start learning</h1>
         <ul class="start_learning">
@@ -187,21 +148,33 @@
 
 
     <!-- box 3. -->
+    <div class="thesis_exhibit">
+        <h6 class="text-muted" style="text-align: center; font-size: xx-large;
+        font-weight: bold;">Thesis exhibit</h6>
+        <video autoplay muted controls width="100%">
+            <source src="./videos/thesis.mp4" type="video/mp4">
+        </video>
+    </div>
 
     <div class="thesis">
         <h1>Thesis exhibit</h1>
         <div class="thesis_exhibit">
             <div class="t_left">
-                <video autoplay muted controls><source src="./videos/thesis.mp4" type="video/mp4" ></video>
-                <h3> &nbsp &nbspReimagine urban</h3>                       
-                <p id="kt" style="width: 50%;"> &nbsp &nbsp "Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ex nulla facilis  &nbsp &nbsp  exercitationem hic tempora voluptates illum illo distinctio dolorum non corporis  &nbsp &nbsp  &nbsp &nbsp libero, aliquid beatae unde nobis nostrum, consectetur iure."</p>
+                <video autoplay muted controls>
+                    <source src="./videos/thesis.mp4" type="video/mp4">
+                </video>
+                <h3> &nbsp &nbspReimagine urban</h3>
+                <p id="kt" style="width: 50%;"> &nbsp &nbsp "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis ex nulla facilis &nbsp &nbsp exercitationem hic tempora voluptates illum illo
+                    distinctio dolorum non corporis &nbsp &nbsp &nbsp &nbsp libero, aliquid beatae unde nobis nostrum,
+                    consectetur iure."</p>
             </div>
             <div class="t_right">
                 <ul class="t_right_list">
                     <li class="fisma_box">
                         <img src="./images/thesis-fisma.jpg">
                         <div class="fisma">
-                            <h2 >Fisma: Design and Prototype</h2>
+                            <h2>Fisma: Design and Prototype</h2>
                             <p>Designer showcase of new prototype product</p>
                         </div>
                     </li>
@@ -220,15 +193,15 @@
     <!-- footer  -->
     <footer class="footerr">
 
-    <div class="left-footer">
-   <p>© 2023 Colmor Academy.All rights reserved </p>
-    </div>
-    <div class="right-footer">
-      <a href="">Terms</a>
-      <a href="">Privacy</a>
-    </div>
+        <div class="left-footer">
+            <p>© 2023 Colmor Academy.All rights reserved </p>
+        </div>
+        <div class="right-footer">
+            <a href="">Terms</a>
+            <a href="">Privacy</a>
+        </div>
 
-</footer>
+    </footer>
 
 
 
