--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 
     <!-- box 3. -->
-    <div class="thesis_exhibit">
+    <div class="thesis_exhibits">
         <h6 class="text-muted" style="text-align: center; font-size: xx-large;
         font-weight: bold;">Thesis exhibit</h6>
         <video autoplay muted controls width="100%">
