--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logoo">
-            <img src="/images/ic-logo.svg" alt=""><a href="" style="font-weight: bold;color: black;">COLMAR</a><a
+            <img src="./images/ic-logo.svg" alt=""><a href="" style="font-weight: bold;color: black;">COLMAR</a><a
                 href="" style="color: rgb(129, 119, 119);">ACADEMY</a>
             <img class="mblogo" src="/images/ic-on-campus.svg" alt="">
             <img class="mblogo" src="/images/ic-online.svg" alt="">
