update somethings in index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="logoo">
             <img src="./images/ic-logo.svg" alt=""><a href="" style="font-weight: bold;color: black;">COLMAR</a><a
                 href="" style="color: rgb(129, 119, 119);">ACADEMY</a>
-            <img class="mblogo" src="/images/ic-on-campus.svg" alt="">
-            <img class="mblogo" src="/images/ic-online.svg" alt="">
-            <img class="mblogo" src="/images/ic-login.svg" alt="">
+            <img class="mblogo" src="./images/ic-on-campus.svg" alt="">
+            <img class="mblogo" src="./images/ic-online.svg" alt="">
+            <img class="mblogo" src="./images/ic-login.svg" alt="">
         </div>
         <div class="head-text">
             <a href="">On campus</a>
